tests/cases/traits/errors/structural-capability-struct-generic-bound.ari
struct Box[T: has serialize() -> i64] {
  value: T,
}

fn main() -> i64 {
  return 0;
}
